k8s/apps/1password-connect/terraform-cloud/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 1password-connect-terraform-cloud
