k8s/apps/1password-connect/terraform-cloud/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`op-tfc.starry.blue`)
      services:
        - name: onepassword-connect
          port: connect-api
